--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,16 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>1.3.2</version>
+	</dependency>
   </dependencies>
+  
+  
+  
 
   <build>
 	<plugins>
@@ -29,7 +38,7 @@
 	        </configuration>
 	      </plugin>
 
-	      <plugin>
+<!-- 	      <plugin>
 	        <groupId>org.jacoco</groupId>
 	        <artifactId>jacoco-maven-plugin</artifactId>
 	        <version>0.6.3.201306030806</version>
@@ -48,7 +57,7 @@
 	                        </goals>
 	                </execution>
         	</executions>
-      	      </plugin>
+      	      </plugin>  -->
 	</plugins>
   </build>
 
